[gd_scene load_steps=13 format=3 uid="uid://bch2lbk5nr6p2"]

[ext_resource type="Script" uid="uid://bdmpy8xb4tkgg" path="res://scripts/bike_scene.gd" id="1_1kycg"]
[ext_resource type="FontFile" uid="uid://d31hlyei8pa20" path="res://assets/fonts/Ephesis-Regular.ttf" id="1_jn4jr"]
[ext_resource type="Texture2D" uid="uid://bkntshikf46gr" path="res://assets/characters/bike.png" id="2_mlisd"]
[ext_resource type="Texture2D" uid="uid://7of57ej2vgfo" path="res://assets/characters/wheel.png" id="3_eu6ug"]
[ext_resource type="Texture2D" uid="uid://c8ismvbuc2gl2" path="res://assets/tree_night.png" id="5_qqnqc"]
[ext_resource type="Texture2D" uid="uid://cs78shcxkenbr" path="res://assets/tree_night_02.png" id="6_wwhmk"]
[ext_resource type="Texture2D" uid="uid://bgrrha2bvht70" path="res://assets/building_01.png" id="7_12wvh"]
[ext_resource type="Texture2D" uid="uid://b8fvvsqbm45xg" path="res://assets/building_03.png" id="8_33j6q"]
[ext_resource type="Texture2D" uid="uid://cxc8bxfm6b2yg" path="res://assets/building_02.png" id="8_i5rfx"]
[ext_resource type="Texture2D" uid="uid://djmnjdydws14k" path="res://assets/building_04.png" id="9_cp6eh"]
[ext_resource type="Texture2D" uid="uid://bdmhnr1rlq0fh" path="res://assets/radio_tower.png" id="11_cp6eh"]
[ext_resource type="Texture2D" uid="uid://bttpeqq7v30pu" path="res://assets/radio_signal.png" id="12_47w42"]

[node name="BikeScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kycg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 864.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="Padding" type="ColorRect" parent="."]
z_index = -9
layout_mode = 0
offset_left = -376.0
offset_top = -320.0
offset_right = 1896.0
offset_bottom = 1184.0
mouse_filter = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -240.0
offset_right = 134.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -15
theme_override_fonts/font = ExtResource("1_jn4jr")
theme_override_font_sizes/font_size = 52
text = "lorem ipsum"
horizontal_alignment = 1

[node name="Bike" type="Node2D" parent="."]
position = Vector2(768, 368)

[node name="Bike" type="Sprite2D" parent="Bike"]
position = Vector2(0, 16)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_mlisd")

[node name="Wheel" type="Sprite2D" parent="Bike/Bike"]
position = Vector2(-50, 44)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_eu6ug")

[node name="Wheel2" type="Sprite2D" parent="Bike/Bike"]
position = Vector2(50, 44)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_eu6ug")

[node name="Background" type="Node2D" parent="."]
position = Vector2(-744, -54)

[node name="NormalTree" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(848, 798)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_qqnqc")

[node name="NormalTree8" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(2920, 910)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_qqnqc")

[node name="NormalTree9" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(3272, 686)
scale = Vector2(1.94667, 2.135)
texture = ExtResource("5_qqnqc")

[node name="NormalTree6" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(2320, 798)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_qqnqc")

[node name="NormalTree2" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(1152, 870)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_qqnqc")

[node name="NormalTree3" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(1448, 782)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_qqnqc")
flip_h = true

[node name="NormalTree4" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(1744, 822)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_wwhmk")
flip_h = true

[node name="NormalTree5" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(2016, 774)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_wwhmk")

[node name="NormalTree7" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(2640, 854)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_wwhmk")

[node name="NormalTree10" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(3584, 862)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_wwhmk")

[node name="NormalTree11" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(3864, 774)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_wwhmk")

[node name="Building1" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(5170, 846)
texture = ExtResource("7_12wvh")

[node name="Building6" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(6908, 926)
texture = ExtResource("7_12wvh")

[node name="Building2" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(5882, 894)
texture = ExtResource("8_i5rfx")

[node name="Building7" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(6386, 870)
texture = ExtResource("8_33j6q")

[node name="Building4" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(5530, 1030)
texture = ExtResource("9_cp6eh")

[node name="Building9" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(7240, 734)
texture = ExtResource("9_cp6eh")

[node name="RadioTower" type="Sprite2D" parent="Background"]
z_index = 2
position = Vector2(4216, 758)
texture = ExtResource("11_cp6eh")

[node name="RadioSignal" type="Sprite2D" parent="Background/RadioTower"]
modulate = Color(1, 1, 1, 0.352941)
z_index = 2
position = Vector2(32, -392)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_47w42")
